Agregado Devise y Cucumber al proyecto.

--- a/app/views/subject_results/index.html.erb
+++ b/app/views/subject_results/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Subject Results</h1>
+<h1>Resultado de las evaluaciones</h1>
 
 <table>
   <thead>
     <tr>
       <th>User survey</th>
-      <th>Question</th>
-      <th>Answer</th>
+      <th>Pregunta</th>
+      <th>Respuesta</th>
       <th colspan="3"></th>
     </tr>
   </thead>
