--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Surveys</h1>
+<h1>Evaluaciones</h1>
 
 <table>
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Inicio</th>
-      <th>Fin</th>
+      <th>Fecha de Inicio</th>
+      <th>Fecha de Fin</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Survey', new_survey_path %>
+<%= link_to 'Nueva Encuesta', new_survey_path %>
