--- a/app/views/admin/levels/edit.html.erb
+++ b/app/views/admin/levels/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Level</h1>
+<div class="small-6 column">
+  <h1>Editar Nivel</h1>
 
-<%= render 'form', level: @level %>
+  <%= render 'form', level: @level %>
 
-<%= link_to 'Show', @level %> |
-<%= link_to 'Back', levels_path %>
+</div>
