--- a/app/views/admin/subjects/new.html.erb
+++ b/app/views/admin/subjects/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Subject</h1>
+<div class="small-6 column">
+  <h1>Nueva Asignatura</h1>
 
-<%= render 'form', subject: @subject %>
-
-<%= link_to 'Back', admin_subjects_path %>
+  <%= render 'form', subject: @subject %>
+</div>
