--- a/app/views/admin/groups/edit.html.erb
+++ b/app/views/admin/groups/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Group</h1>
+<div class="small-6 column">
+  <h1>Editar Grupo</h1>
 
-<%= render 'form', group: @group %>
-
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
+  <%= render 'form', group: @group %>
+</div>
