--- a/app/views/admin/groups/new.html.erb
+++ b/app/views/admin/groups/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Group</h1>
+<div class="small-6 column">
+  <h1>Nuevo Grupo</h1>
 
-<%= render 'form', group: @group %>
-
-<%= link_to 'Back', groups_path %>
+  <%= render 'form', group: @group %>
+</div>
