--- a/app/views/admin/intervals/edit.html.erb
+++ b/app/views/admin/intervals/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Interval</h1>
+<div class="small-6 column">
+  <h1>Editar Intervalo</h1>
 
-<%= render 'form', interval: @interval %>
-
-<%= link_to 'Show', @interval %> |
-<%= link_to 'Back', intervals_path %>
+  <%= render 'form', interval: @interval %>
+</div>
