--- a/app/views/admin/intervals/new.html.erb
+++ b/app/views/admin/intervals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Interval</h1>
+<div class="small-6 column">
+  <h1>Nueva Intervalo</h1>
 
-<%= render 'form', interval: @interval %>
-
-<%= link_to 'Back', intervals_path %>
+  <%= render 'form', interval: @interval %>
+</div>
