--- a/app/views/admin/levels/_form.html.erb
+++ b/app/views/admin/levels/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(level) do |f| %>
+<%= form_for([:admin, level]) do |f| %>
   <% if level.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(level.errors.count, "error") %> prohibited this level from being saved:</h2>
@@ -13,10 +13,10 @@
 
   <div class="field">
     <%= f.label :nombre %>
-    <%= f.text_area :nombre %>
+    <%= f.text_field :nombre %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Guardar', class: 'button'%>
   </div>
 <% end %>
