--- a/app/views/admin/levels/index.html.erb
+++ b/app/views/admin/levels/index.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
 
-<h1>Levels</h1>
+<h1>Niveles</h1>
 
-<table>
+<table class="table" border="0" cellpadding="0" cellspacing="0">
   <thead>
     <tr>
       <th>Nombre</th>
-      <th colspan="3"></th>
+      <th class="action_column"></th>
     </tr>
   </thead>
 
@@ -14,9 +14,13 @@
     <% @levels.each do |level| %>
       <tr>
         <td><%= level.nombre %></td>
-        <td><%= link_to 'Show', level %></td>
-        <td><%= link_to 'Edit', edit_level_path(level) %></td>
-        <td><%= link_to 'Destroy', level, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="action_column">
+          <div class="action_links">
+            <%= link_to "", admin_level_path(level), class: "fa fa-search view_link" %>
+            <%= link_to "", edit_admin_level_path(level), class: "fa fa-pencil edit_link" %>
+            <%= link_to "", admin_level_path(level), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Level', new_level_path %>
+<%= link_to 'Crear Nivel', new_admin_level_path, class: 'button' %>
