--- a/app/views/admin/levels/new.html.erb
+++ b/app/views/admin/levels/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Level</h1>
+<div class="small-6 column">
+  <h1>Nuevo Nivel</h1>
 
-<%= render 'form', level: @level %>
+  <%= render 'form', level: @level %>
 
-<%= link_to 'Back', levels_path %>
+</div>
