--- a/app/views/admin/subjects/edit.html.erb
+++ b/app/views/admin/subjects/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Subject</h1>
+<div class="small-6 column">
+  <h1>Editar Asignaturas</h1>
 
-<%= render 'form', subject: @subject %>
-
-<%= link_to 'Show', @subject %> |
-<%= link_to 'Back', subjects_path %>
+  <%= render 'form', subject: @subject %>
+</div>
