--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -1,29 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+  <h1>Asignaturas</h1>
 
-<h1>Asignaturas</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Código</th>
-      <th>Nombre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @subjects.each do |subject| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= subject.codigo %></td>
-        <td><%= subject.nombre %></td>
-        <td><%= link_to 'Show', admin_subject_path(subject) %></td>
-        <td><%= link_to 'Edit', edit_admin_subject_path(subject) %></td>
-        <td><%= link_to 'Destroy', admin_subject_path(subject), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Código</th>
+        <th>Nombre</th>
+        <th class="action_column"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @subjects.each do |subject| %>
+        <tr>
+          <td><%= subject.codigo %></td>
+          <td><%= subject.nombre %></td>
+          <td class="action_column">
+            <div class="action_links">
+              <%= link_to "", admin_subject_path(subject), class: "fa fa-search view_link" %>
+              <%= link_to "", edit_admin_subject_path(subject), class: "fa fa-pencil edit_link" %>
+              <%= link_to "", admin_subject_path(subject), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'Crear Asignatura', new_admin_subject_path %>
+  <br>
+
+  <%= link_to 'Crear Asignatura', new_admin_subject_path, class: 'button' %>
+</div>
