--- a/app/views/admin/user_types/index.html.erb
+++ b/app/views/admin/user_types/index.html.erb
@@ -1,27 +1,20 @@
-<p id="notice"><%= notice %></p>
+<div class="small-8 column">
 
-<h1>User Types</h1>
+  <h1>Tipo de Usuarios</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @user_types.each do |user_type| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= user_type.nombre %></td>
-        <td><%= link_to 'Show', user_type %></td>
-        <td><%= link_to 'Edit', edit_user_type_path(user_type) %></td>
-        <td><%= link_to 'Destroy', user_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Nombre</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New User Type', new_user_type_path %>
+    <tbody>
+      <% @user_types.each do |user_type| %>
+        <tr>
+          <td><%= user_type.nombre %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
