--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,29 +1,32 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+  <h1>Usuarios</h1>
 
-<h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Codigo</th>
-      <th>Nombre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= user.codigo %></td>
-        <td><%= user.nombre %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Codigo</th>
+        <th>Nombre</th>
+        <th class="action_column"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.codigo %></td>
+          <td><%= user.nombre %></td>
+          <td class="action_column">
+            <div class="action_links">
+              <%= link_to "", admin_user_path(user), class: "fa fa-search view_link" %>
+              <%= link_to "", edit_admin_user_path(user), class: "fa fa-pencil edit_link" %>
+              <%= link_to "", admin_user_path(user), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
 
-<%= link_to 'New User', new_user_path %>
+  <%= link_to 'Crear Usuario', new_admin_user_path, class: 'button' %>
+</div>
