--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New User</h1>
+<div class="small-8 column">
+  <h1>Nuevo Usuario</h1>
 
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+  <%= render 'form', user: @user %>
+</div>
