--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,14 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="small-8 column">
+  <p>
+    <strong>Codigo:</strong>
+    <%= @user.codigo %>
+  </p>
+  <p>
+    <strong>Nombre:</strong>
+    <%= @user.nombre %>
+  </p>
+  <p>
+    <strong>Email:</strong>
+    <%= @user.email %>
+  </p>
 
-<p>
-  <strong>Codigo:</strong>
-  <%= @user.codigo %>
-</p>
-
-<p>
-  <strong>Nombre:</strong>
-  <%= @user.nombre %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Back', admin_users_path, class: 'button' %>
+</div>
