--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-<% if admin_user_signed_in? %>
+<% if user_signed_in? %>
  <body class="<%=body_class%>">
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
