--- a/app/views/admin/survey_results/index.html.erb
+++ b/app/views/admin/survey_results/index.html.erb
@@ -1,5 +1,13 @@
 <div class="small-12 column">
-  <h1>Resultado de las evaluaciones</h1>
+  <div class="full-with">
+    <div class="small-8 column">
+      <h1>Resultado de las evaluaciones</h1>
+    </div>
+    <div class="small-4 column">
+      <%= link_to 'Graficos', '', id: 'grafico', class: 'button'%>
+      <%= link_to 'Exportar', '', id: 'grafico', class: 'button'%>
+    </div>
+  </div>
   <table class="table" border="0" cellpadding="0" cellspacing="0">
     <thead>
       <tr>
