Reparado error en doble login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,29 +21,13 @@
  <body class="<%=body_class%>">
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
-   <div class="off-canvas-wrap" data-offcanvas>
-    <div class="inner-wrap">
-      <nav class="tab-bar">
-        <section class="left-small">
-          <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-        </section>
-      </nav>
-
-      <aside class="left-off-canvas-menu">
-        <%#= render "layouts/menu_bar" %>
-      </aside>
-
-      <section class="main-section">
-        <div class="small-12 columns page_container">
-          <div class="row column full-width">
-            <%= yield %>
-          </div>
-        </div>
-      </section>
-
-    <a class="exit-off-canvas"></a>
-    </div>
-  </div>
+   <div class="row">
+     <div class="small-12 columns page_container">
+       <div class="row column full-width">
+         <%= yield %>
+       </div>
+     </div>
+   </div>
 </body>
 <% else %>
  <%= yield %>
