Agregando importaciones de las evaluaciones.

--- a/app/assets/javascripts/templates/subject/import.jst.ejs
+++ b/app/assets/javascripts/templates/subject/import.jst.ejs
@@ -1,5 +1,5 @@
 <div class="small-12">
-  <div id="modal-import" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+  <div id="modal-import-subject" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <div class="row">
       <div class='panel small-6 medium-8 large-12 columns'>
         <div class='panel-title light-blue small-12'>
@@ -18,7 +18,7 @@
             <br><br>
             <div class="row">
               <div class="small-12 medium-6 large-7 columns field-input">
-                <input id="import-file-btn" type="button" name="guardar" value="Importar" class="button center">
+                <input id="import-file-subject-btn" type="button" name="guardar" value="Importar" class="button center">
               </div>
             </div>
           </div>
