--- a/app/views/admin/surveys/_form.html.erb
+++ b/app/views/admin/surveys/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :nombre %>
-    <%= f.text_area :nombre %>
+    <%= f.text_field :nombre %>
   </div>
 
   <div class="field">
@@ -27,6 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Guardar', class: 'button' %>
   </div>
 <% end %>
