--- a/app/views/admin/surveys/new.html.erb
+++ b/app/views/admin/surveys/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Survey</h1>
-
-<%= render 'form', survey: @survey %>
-
-<%= link_to 'Back', admin_surveys_path %>
+<div class="small-6 column">
+  <h1>Nueva Evaluación</h1>
+  <%= render 'form', survey: @survey %>
+</div>
