--- a/app/views/admin/surveys/edit.html.erb
+++ b/app/views/admin/surveys/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Survey</h1>
-
-<%= render 'form', survey: @survey %>
-
-<%= link_to 'Show', @survey %> |
-<%= link_to 'Back', admin_surveys_path %>
+<div class="small-6 column">
+  <h1>Editar Evaluación</h1>
+  <%= render 'form', survey: @survey %>
+</div>
