--- a/app/views/admin/surveys/index.html.erb
+++ b/app/views/admin/surveys/index.html.erb
@@ -1,31 +1,44 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+  <div class="full-with">
+    <div class="small-8 column">
+      <h1>Evaluaciones</h1>
+    </div>
+    <div class="row scopes">
+      <div class="small-12 column">
+        <%= scope :all, "Todos" %>
+        <%#= render partial: "admin/survey_comments/search_form", layout: "layouts/search_form" %>
+      </div>
+    </div>
+  </div>
 
-<h1>Evaluaciones</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Fecha de Inicio</th>
-      <th>Fecha de Fin</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @surveys.each do |survey| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= survey.nombre %></td>
-        <td><%= survey.inicio %></td>
-        <td><%= survey.fin %></td>
-        <td><%= link_to 'Show', admin_survey_path(survey) %></td>
-        <td><%= link_to 'Edit', edit_admin_survey_path(survey) %></td>
-        <td><%= link_to 'Destroy', admin_survey_path(survey), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Nombre</th>
+        <th>Fecha de Inicio</th>
+        <th>Fecha de Fin</th>
+        <th class="action_column"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @surveys.each do |survey| %>
+        <tr>
+          <td><%= survey.nombre %></td>
+          <td><%= survey.inicio %></td>
+          <td><%= survey.fin %></td>
+          <td class="action_column">
+            <div class="action_links">
+              <%= link_to '', admin_survey_path(survey), class: "fa fa-search view_link" %>
+              <%= link_to '', edit_admin_survey_path(survey), class: "fa fa-pencil edit_link" %>
+              <%= link_to '', admin_survey_path(survey), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
 <br>
 
-<%= link_to 'Nueva Encuesta', new_admin_survey_path %>
+<%= link_to 'Crear Evaluación', new_admin_survey_path, class: 'button' %>
