--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Question</h1>
-
-<%= render 'form', question: @question %>
-
-<%= link_to 'Back', questions_path %>
+<div class="small-6 column">
+  <h1>Nueva Pregunta</h1>
+  <%= render 'form', question: @question %>
+</div>
