--- a/app/views/surveys/_alumnos_detalles.html.erb
+++ b/app/views/surveys/_alumnos_detalles.html.erb
@@ -8,284 +8,14 @@
     </th>
   </thead>
   <tbody>
-    <tr>
-      <td>El profesor propone bibliografía y recursos informáticos que son útiles para la clase.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor distribuye adecuadamente el tiempo y las actividades para cumplir los temas del curso.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor desarrolla las actividades de aprendizaje, siguiendo un orden lógico que promueve y facilita tu aprendizaje.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor imparte la materia de manera que te lleva a investigar más sobre los temas vistos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor te cuestiona de forma que promueve tu razonamiento y capacidad para resolver problemas.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor presenta los contenidos del tema de manera gráfica, ordenada y sintetizada para facilitar tu comprensión.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor imparte su clase de tal manera que entiendes la información y puedes explicarla con tus propias palabras.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor promueve la participación de los alumnos en diferentes actividades de aprendizaje.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor promueve el diálogo, la reflexión y el debate sobre los temas tratados.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor utiliza métodos didácticos auxiliares (gráficas, medios visuales y otros) que mejoran sus exposiciones.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor cubre satisfactoriamente los temas previstos en el programa.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor relaciona los contenidos del tema con la vida diaria.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor verifica en cada clase si los contenidos han sido comprendidos por todo el grupo.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor da a conocer los resultados de los trabajos oportunamente para que corrijan sus errores.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor entrega calificaciones y retroalimenta a los alumnos, indicando las fallas y aciertos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor entrega los resultados de la evaluación dentro del periodo establecido para ello.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor utiliza formas de evaluación adecuadas al contenido de la materia.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor califica la materia tomando en cuenta los aspectos relevantes del curso.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor revisa las tareas, trabajos y exámenes para retroalimentar el aprendizaje.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor, al calificar, aplica los mismos criterios para todos los alumnos sin mostrar preferencia por alguno de ellos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor con su actitud o comentarios indica que le interesan todos sus alumnos por igual.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor se muestra accesible y brinda apoyo apropiado para el aprendizaje.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor evita hacer comentarios que pueden denigrar al alumno.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor escucha con respeto las opiniones de los alumnos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor cumple en su persona lo que exige a los demás.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor acepta las diferencias individuales de los alumnos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor da a cada alumno la atención que necesita para que todos logren la meta propuesta.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
-
-    <tr>
-      <td>El profesor es congruente entre lo que expresa a los alumnos y lo que manifiesta en los hechos.</td>
-      <td>
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value="">
-        <input type="radio" name="name" value=""></td>
-    </tr>
+    <% @questions.each do |question| %>
+      <tr>
+        <td><%= question.display_name %></td>
+        <td>
+          <% @answers.each do |answer| %>
+            <input type="radio" id="answer_<%=answer.id %>" name="post[category]" value="<% answer.id %>" />
+          <% end %>
+      </tr>
+    <% end %>
   </tbody>
-  </table>
+</table>
