--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Answer</h1>
+<div class="small-6 column">
+  <h1>Editar Respuesta</h1>
 
-<%= render 'form', answer: @answer %>
+  <%= render 'form', answer: @answer %>
 
-<%= link_to 'Show', @answer %> |
-<%= link_to 'Back', answers_path %>
+</div>
