--- a/app/views/admin/answers/index.html.erb
+++ b/app/views/admin/answers/index.html.erb
@@ -1,31 +1,35 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+  <h1>Respuestas</h1>
 
-<h1>Answers</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>User type</th>
-      <th>Descripcion</th>
-      <th>Answer type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @answers.each do |answer| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= answer.user_type %></td>
-        <td><%= answer.descripcion %></td>
-        <td><%= answer.answer_type %></td>
-        <td><%= link_to 'Show', admin_answer_path(answer) %></td>
-        <td><%= link_to 'Edit', edit_admin_answer_path(answer) %></td>
-        <td><%= link_to 'Destroy', admin_answer_path(answer), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Tipo de Usuario</th>
+        <th>Descripcion</th>
+        <th>Tipo de Respuesta</th>
+        <th class="action_column"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @answers.each do |answer| %>
+        <tr>
+          <td><%= answer.user_type.display_name %></td>
+          <td><%= answer.descripcion %></td>
+          <td><%= answer.answer_type.try(:display_name) %></td>
+          <td class="action_column">
+            <div class="action_links">
+              <%= link_to '', admin_answer_path(answer), class: "fa fa-search view_link" %>
+              <%= link_to '', edit_admin_answer_path(answer), class: "fa fa-pencil edit_link" %>
+              <%= link_to '', admin_answer_path(answer), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Answer', new_admin_answer_path %>
+  <br>
+
+  <%= link_to 'Nueva Respuesta', new_admin_answer_path, class: 'button' %>
+</div>
