--- a/app/views/admin/answers/new.html.erb
+++ b/app/views/admin/answers/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Answer</h1>
+<div class="small-6 column">
+  <h1>Nueva Respuesta</h1>
 
-<%= render 'form', answer: @answer %>
+  <%= render 'form', answer: @answer %>
 
-<%= link_to 'Back', answers_path %>
+</div>
