--- a/app/views/admin/question_types/index.html.erb
+++ b/app/views/admin/question_types/index.html.erb
@@ -1,29 +1,21 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+<h1>Tipos de Preguntas</h1>
 
-<h1>Question Types</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Codigo</th>
-      <th>Descripcion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @question_types.each do |question_type| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= question_type.codigo %></td>
-        <td><%= question_type.descripcion %></td>
-        <td><%= link_to 'Show', question_type %></td>
-        <td><%= link_to 'Edit', edit_question_type_path(question_type) %></td>
-        <td><%= link_to 'Destroy', question_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Codigo</th>
+        <th>Descripcion</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Question Type', new_question_type_path %>
+    <tbody>
+      <% @question_types.each do |question_type| %>
+        <tr>
+          <td><%= question_type.codigo %></td>
+          <td><%= question_type.descripcion %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
