--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(question) do |f| %>
+<%= form_for([:admin, question]) do |f| %>
   <% if question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_type_id %>
-    <%= f.text_field :user_type_id %>
+    <%= f.label 'Tipo de Usuario' %>
+    <%= f.select :user_type_id, UserType.all.collect { |q| [ q.display_name, q.id ] } %>
   </div>
 
   <div class="field">
@@ -22,11 +22,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :question_type_id %>
-    <%= f.text_field :question_type_id %>
+    <%= f.label 'Tipo de Pregunta' %>
+    <%= f.select :question_type_id, QuestionType.all.collect { |q| [ q.display_name, q.id ] } %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Guardar', class: 'button' %>
   </div>
 <% end %>
