--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Question</h1>
-
-<%= render 'form', question: @question %>
-
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
+<div class="small-6 column">
+  <h1>Editar Pregunta</h1>
+  <%= render 'form', question: @question %>
+</div>
