--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -1,31 +1,44 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
+  <div class="full-with">
+    <div class="small-8 column">
+      <h1>Preguntas</h1>
+    </div>
+    <div class="row scopes">
+      <div class="small-12 column">
+        <%= scope :all, "Todos" %>
+        <%#= render partial: "admin/survey_comments/search_form", layout: "layouts/search_form" %>
+      </div>
+    </div>
+  </div>
 
-<h1>Questions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Tipo de Evaluador</th>
-      <th>Descripcion</th>
-      <th>Tipo de Pregunta</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @questions.each do |question| %>
+  <table class="table" border="0" cellpadding="0" cellspacing="0">
+    <thead>
       <tr>
-        <td><%= question.user_type.display_name %></td>
-        <td><%= question.descripcion %></td>
-        <td><%= question.question_type.display_name %></td>
-        <td><%= link_to 'Show', admin_question_path(question) %></td>
-        <td><%= link_to 'Edit', edit_admin_question_path(question) %></td>
-        <td><%= link_to 'Destroy', admin_question_path(question), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Tipo de Evaluador</th>
+        <th>Descripcion</th>
+        <th>Tipo de Pregunta</th>
+        <th class="action_column"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @questions.each do |question| %>
+        <tr>
+          <td><%= question.user_type.display_name %></td>
+          <td><%= question.descripcion %></td>
+          <td><%= question.question_type.try(:display_name) %></td>
+          <td class="action_column">
+            <div class="action_links">
+              <%= link_to '', admin_question_path(question), class: "fa fa-search view_link" %>
+              <%= link_to '', edit_admin_question_path(question), class: "fa fa-pencil edit_link" %>
+              <%= link_to '', admin_question_path(question), class: "fa fa-trash delete_link", confirm: "¿Está seguro de que quiere eliminar esto?", method: :delete %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
 <br>
 
-<%= link_to 'New Question', new_admin_question_path %>
+<%= link_to 'Crear Pregunta', new_admin_question_path, class: 'button' %>
