--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="small-12 column">
 
 <p>
   <strong>User type:</strong>
-  <%= @question.user_type %>
+  <%= @question.user_type.display_name %>
 </p>
 
 <p>
@@ -12,8 +12,8 @@
 
 <p>
   <strong>Question type:</strong>
-  <%= @question.question_type %>
+  <%= @question.question_type..try(:display_name) %>
 </p>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Editar', edit_admin_question_path(@question), class: 'button' %>
+<%= link_to 'Atras', admin_questions_path, class: 'button' %>
