--- a/app/assets/stylesheets/admin/table.scss
+++ b/app/assets/stylesheets/admin/table.scss
@@ -9,7 +9,7 @@ table.table {
     > a:after {
       position: relative;
       left: 3px;
-      content: image-url("images/sort-white.png");
+      content: image-url("sort-white.png");
     }
     a {
       color: #fff;
@@ -47,4 +47,26 @@ table.table {
 
 body {
   background-color: #dadada;
+}
+
+.digg_pagination span {
+  display: inline-block;
+  padding: 3px 5px;
+  border: solid 1px #c0c0c0;
+  background: #e9e9e9;
+  font-size: .875em;
+  font-weight: bold;
+  text-decoration: none;
+  color: #717171;
+  text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f8f8f8), to(#e9e9e9));
+  background: -moz-linear-gradient(0% 0% 270deg,#f8f8f8, #e9e9e9);
+ }
+
+.digg_pagination span.page.current {
+  border: solid 1px #c0c0c0;
+  background: #616161;
+  box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+  color: #f0f0f0;
+  text-shadow: 0px 0px 3px rgba(0,0,0, .5);
 }
