--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="small-4 column">
       <button type="button" name="button" id="import-subject" class="button">Importar</button>
+      <%= link_to 'Crear Asignatura', new_admin_subject_path, class: 'button' %>
     </div>
     <div class="row scopes">
       <div class="small-12 column">
@@ -17,8 +18,8 @@
   <table class="table" border="0" cellpadding="0" cellspacing="0">
     <thead>
       <tr>
-        <th>Código</th>
-        <th>Nombre</th>
+        <th><%= sort_link(@q, :codigo, 'Código') %></th>
+        <th><%= sort_link(@q, :nombre, 'Nombre') %></th>
         <th class="action_column"></th>
       </tr>
     </thead>
@@ -39,8 +40,10 @@
       <% end %>
     </tbody>
   </table>
-
-  <br>
-
-  <%= link_to 'Crear Asignatura', new_admin_subject_path, class: 'button' %>
+  <div class="row">
+    <div class="small-12 column">
+      <%= paginate @subjects %>
+      <%= page_entries_info  @subjects %>
+    </div>
+  </div>
 </div>
